# metric-validation-playbook

./: .gitignore  credentials.json  getdata.ipynb  pyproject.toml
notebooks/: 01_data_understanding_eda.ipynb  02_metric_definition.ipynb  03_metric_validation.ipynb
src/mvplaybook/core/: context.py  result.py
src/mvplaybook/eda/: plots.py  profiler.py
src/mvplaybook/io/: base.py  opensky.py
src/mvplaybook/metrics/: base.py  opensky_radr.py
src/mvplaybook/validation/: base.py  cuped.py  drift.py  robustness.py  segmentation.py  sensitivity.py  stability.py  uncertainty.py  utils.py
